crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_range-5.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
RangeEx(
    None,
    Some(
        Int {
            value: 1,
        },
    ),
)
