crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_range-6.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
RangeEx(
    Some(
        Int {
            value: 1,
        },
    ),
    None,
)
