crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_range-7.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
RangeInc(
    None,
    Int {
        value: 1,
    },
)
