crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_range-8.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
RangeInc(
    Some(
        Int {
            value: 0,
        },
    ),
    Int {
        value: 1,
    },
)
