crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_range.snap
---
source: crates/syntax/src/parser/tests.rs
expression: "(result, parser.errors)"
---
(
    Ok(
        Range {
            start: Int {
                value: 0,
            },
            end: Int {
                value: 1,
            },
        },
    ),
    [],
)
