crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_range_before_block-2.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
If {
    branches: [
        (
            RangeEx(
                Some(
                    Int {
                        value: 0,
                    },
                ),
                None,
            ),
            Block {
                items: [],
                last: Some(
                    Int {
                        value: 0,
                    },
                ),
            },
        ),
    ],
    else_: None,
}
