crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_range_before_block-6.snap
---
source: crates/syntax/src/parser/tests.rs
expression: errors
---
[
    RangeInclusiveNoEnd(
        Span {
            start: 4,
            end: 7,
        },
    ),
]
