crates/syntax/src/parser/snapshots/syntax__parser__tests__parse_expr_range_before_block-7.snap
---
source: crates/syntax/src/parser/tests.rs
expression: node.unwrap()
---
If {
    branches: [
        (
            RangeInc(
                None,
                Int {
                    value: 1,
                },
            ),
            Block {
                items: [],
                last: Some(
                    Int {
                        value: 0,
                    },
                ),
            },
        ),
    ],
    else_: None,
}
